fixed overflow x

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,7 @@ a {
 	-webkit-touch-callout: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-*{
-overflow-x: hidden;
-}
+
 #container {
 	width: 100%;
 	height: 100%;
@@ -93,12 +91,13 @@ overflow-x: hidden;
 
 .page .scroller {
 	position: absolute;
-	overflow: auto;
+	overflow-y: auto;
 	top: 45px;
 	left: 0px;
 	right: 0;
 	bottom: 0;
 	-webkit-overflow-scrolling: touch;
+	overflow-x: hidden;
 }
 
 
